# tornado

./: .coveragerc  .deepsource.toml  .flake8  .gitattributes  .gitignore  .hh-release.yaml  .readthedocs.yaml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README  README.md  README.rst  SECURITY.md  appveyor.yml  bug.py  codecov.yml  index.html  pr_body.md  pr_body2.md  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  runtests.sh  setup.cfg  setup.py  sonar-project.properties  tox.ini  ttt
.codeboarding/: Asynchronous Core.md  Authentication.md  HTTP Client.md  Network Servers & I-O.md  System Utilities.md  Testing Framework.md  Web Application Framework.md  Web Utilities.md  on_boarding.md
.github/: zizmor.yml
.github/workflows/: build.yml  test.yml  zizmor.yaml
BENCH/: chatdemo.py
cython/: zlib_stream.c  zlib_stream.pyx
debian/: changelog  control  rules
demos/: README.rst
demos/ajax/: ajaxServer.py
demos/appengine/: README  app.yaml  blog.py  markdown.py
demos/auth/: authdemo.py
demos/background_task/: background_task.py
demos/benchmark/: benchmark.py  chunk_benchmark.py  gen_benchmark.py  stack_context_benchmark.py  template_benchmark.py
demos/blog/: Dockerfile  README  blog.py  docker-compose.yml  markdown.py  requirements.txt  schema.sql  wait-for-postgres.sh
demos/chat/: chatdemo.py  testing
demos/colored_log/: colored_log.py
demos/facebook/: README  facebook.py  uimodules.py
demos/file_upload/: file_receiver.py  file_uploader.py
demos/google_auth/: .gitignore  main.py
demos/helloasyncio/: helloasyncio.py
demos/helloworld/: helloworld.py
demos/iframe_crossdomain/: README.md  helloworld.py  requirements.txt
demos/localization/: localization.py
demos/mako/: main.py
demos/mongodb_login_example/: app.py  readme.md  sessionDAO.py  userDAO.py  utils.py
demos/reverseproxy/: reverseproxydemo.py
demos/router/: routerdemo.py
demos/s3server/: s3server.py
demos/server_sent_events/: message_source.py
demos/spdyserver/: certificate.pem  certrequest.csr  privatekey.pem  spdyserver.py
demos/streambody/: client.py  server.py
demos/tcpecho/: README.md  client.py  server.py
demos/template/: index.py
demos/testing/: README.md
demos/twitter/: home.html  twitterdemo.py
demos/websocket/: chatdemo.py
demos/webspider/: webspider.py
docker/: Dockerfile.building
docs/: Makefile  asyncio.rst  auth.rst  caresresolver.rst  concurrent.rst  conda.yml  conf.py  coroutine.rst  documentation.rst  escape.rst  faq.rst  gen.rst  guide.rst  http.rst  http1connection.rst  httpclient.rst  httpserver.rst  httputil.rst  index.rst  integration.rst  ioloop.rst  iostream.rst  locale.rst  locks.rst  mock.rst  netutil.rst  networking.rst  options.rst  overview.rst  process.rst  queues.rst  releases.rst  requirements.in  requirements.txt  routing.rst  tcpclient.rst  tcpserver.rst  template.rst  testing.rst  tornado.css  (+7 more)
docs/guide/: async.rst  coroutines.rst  intro.rst  queues.rst  running.rst  security.rst  structure.rst  templates.rst
docs/releases/: next.rst  v1.2.0.rst  v2.1.0.rst  v2.1.1.rst  v2.2.0.rst  v2.2.1.rst  v2.3.0.rst  v2.4.0.rst  v2.4.1.rst  v3.0.0.rst  v3.0.1.rst  v3.0.2.rst  v3.1.0.rst  v3.1.1.rst  v3.2.0.rst  v3.2.1.rst  v3.2.2.rst  v4.0.0.rst  v4.0.1.rst  v4.0.2.rst  v4.1.0.rst  v4.2.0.rst  v4.2.1.rst  v4.3.0.rst  v4.4.0.rst  v4.4.1.rst  v4.4.2.rst  v4.4.3.rst  v4.5.0.rst  v4.5.1.rst  v4.5.2.rst  v4.5.3.rst  v5.0.0.rst  v5.0.1.rst  v5.0.2.rst  v5.1.0.rst  v5.1.1.rst  v6.0.0.rst  v6.0.1.rst  v6.0.2.rst  (+19 more)
maint/: README  requirements.in  requirements.txt
maint/appengine/: README
maint/benchmark/: benchmark.py  chunk_benchmark.py  gen_benchmark.py  parsing_benchmark.py  template_benchmark.py
maint/circlerefs/: circlerefs.py
maint/scripts/: download_wheels.py  run_autopep8.sh  run_fixers.py  runcog.sh  test_resolvers.py
maint/test/: README
menual_test/: menual.py  test_app.py  upload.html
tornado/: __init__.py  __init__.pyi  _locale_data.py  _websocket_unmask.c  asgi.py  auth.py  autoreload.py  blueprints.py  c_zlib.py  ca-certificates.crt  cnauth.py  concurrent.py  curl_httpclient.py  database.py  debug.html  debug.py  epoll.c  escape.py  fcntl_win32.py  futures.py  gen.py  http1connection.py  httpclient.py  httpserver.py  httputil.py  ioloop.py  iostream.py  locale.py  locks.py  log.py  mock.py  netutil.py  options.py  process.py  promises.py  queues.py  reloader.py  router.py  routing.py  runtests  (+20 more)
website/: Makefile  app.yaml  tornado  website.py
(+271 files in other folders)
