[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
# [[[cog
#    cog.outl(f"target-version = ['py3{min_python_minor}']")
# ]]]
target-version = ['py310']
#[[[end]]]

[tool.cibuildwheel]
# [[[cog
#    versions = [f"cp3{m}*" for m in range(int(min_python_minor), int(max_python_minor) + 1)]
#    versions += ["cp314t*"]
#    cog.outl(f"build = \"{" ".join(versions)}\"")
# ]]]
build = "cp310* cp311* cp312* cp313* cp314* cp314t*"
#[[[end]]]
test-command = "python -m tornado.test"

[tool.cibuildwheel.macos]
archs = "universal2"

[tool.cibuildwheel.windows]
# TODO: figure out what's going on with these occasional log messages.
test-command = "python -m tornado.test --fail-if-logs=false"
