[metadata]
license_file = LICENSE

[mypy]
python_version = 3.5

[mypy-tornado.*,tornado.platform.*]
disallow_untyped_defs = True

[mypy-tornado.auth,tornado.curl_httpclient,tornado.httpclient,tornado.routing,tornado.simple_httpclient,tornado.template,tornado.web,tornado.websocket,tornado.wsgi]
disallow_untyped_defs = False

# It's generally too tedious to require type annotations in tests, but
# we do want to type check them as much as type inference allows.
[mypy-tornado.test.*]
disallow_untyped_defs = False
check_untyped_defs = True
