[metadata]
license_file = LICENSE

[mypy]
# [[[cog cog.outl(f"python_version = 3.{min_python_minor}")]]]
python_version = 3.10
# [[[end]]]
no_implicit_optional = True

[mypy-tornado.*,tornado.platform.*]
disallow_untyped_defs = True

# It's generally too tedious to require type annotations in tests, but
# we do want to type check them as much as type inference allows.
[mypy-tornado.test.*]
disallow_untyped_defs = False
check_untyped_defs = True
